2009-01-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs: Remove property
	changed event handler on dispose.

2009-01-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomEventNodeBuilder.cs: Show constructors
	in type view.

2009-01-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/Decompiler.cs:
	* MonoDevelop.AssemblyBrowser/NamespaceBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomMethodNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs: Worked on
	assembly browser output now looks like syntax highlighting &
	clickable types. (fixing Bug 456306 - "Assembly Browser: types should
	be clickable.")

2009-01-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs: Added loading of
	references when clicking on types that are not loaded.

2009-01-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/NamespaceBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/ReferenceNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs:
	* MonoDevelop.AssemblyBrowser/ReferenceFolderNodeBuilder.cs: Types are
	now clickable.

2009-01-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/NamespaceBuilder.cs:
	* MonoDevelop.AssemblyBrowser/ModuleDefinitionNodeBuilder.cs: fixed "Bug
	456308 - Assembly Browser: namespace browser".

2009-01-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs:
	* gtk-gui/MonoDevelop.AssemblyBrowser.AssemblyBrowserWidget.cs: Added
	link support (Loading of referenced links still missing).

2009-01-13  Lluis Sanchez Gual  <lluis@novell.com>
